--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "axios": "^1.6.2",
         "canvas-confetti": "^1.9.4",
+        "date-fns": "^4.1.0",
         "framer-motion": "^10.16.16",
         "lucide-react": "^0.294.0",
         "react": "^18.2.0",
